@@ -1,3 +1,9 @@
+2006-12-30  Danny Backx <dannybackx@users.sourceforge.net>
+
+	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Change the
+	approach to deal with -DNO_UNDERSCORES so we keep CFLAGS free for use
+	by the command line.
+
 2006-12-24  Danny Backx <dannybackx@users.sourceforge.net>
 
 	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Add.
